Tweak to .cfignore to exclude some additional files

--- a/.cfignore
+++ b/.cfignore
@@ -31,3 +31,11 @@ node_modules
 
 # Eclipse project settings
 .settings
+
+# Eclipse project settings
+.settings
+.project
+
+# Misc files
+.cfignore
+.jshintrc
